# iot_distributed_event_processing

./: .gitignore  README.md  build.sh  config.yaml  docker-compose.yml  initial_installation.sh  install_docker.sh  launch_all.sh  pyproject.toml  requirements.txt  requirements11.txt
arduino/watch_event_processing/: config.h  http_requests.cpp  http_requests.h  lvgl.cpp  lvgl.h  sensors.cpp  sensors.h  watch_event_processing.ino
sensors/: Dockerfile  accelerator.py  check_server_health.py  config.json  config.yaml  humidity_temp_pressure.py  joystick.py  launch.sh  rainbow_leds.py  sensehat.py  sound.py  sound_stub.py  utils.py
server/: Dockerfile  http_server.py  parse.py  rainbow_leds.py  siddhi_app.py
siddhi_app_test/: test.py
